--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Letícia Florêncio - Comunicação Criativa</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Comunicação criativa para causas sociais. Assessoria estratégica, social media, design e marketing com impacto real." />
+    <link rel="stylesheet" href="estilos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-
     <header class="header">
-        <a href="#" class="logo">
-            <img src="Imagens/LF (5).png" alt="Letícia Florêncio Logo">
+        <a href="#hero" class="logo">
+            <img src="Imagens/LF (5).png" alt="Logomarca Letícia Florêncio" loading="lazy" />
             <span>Letícia Florêncio</span>
         </a>
         <nav class="nav">
             <button class="nav-toggle" aria-label="Abrir menu">
                 <span class="hamburger"></span>
             </button>
-            <ul class="nav-menu">
-                <li><a href="#nossa-missao">Nossa Missão</a></li>
+            <ul class="nav-menu" id="primary-menu">
                 <li><a href="#quem-somos">Quem Somos</a></li>
+                <li><a href="#nossa-essencia">Nossa Essência</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#portfolio">Portfólio</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -30,115 +30,125 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero" id="hero">
+    <main id="main-content">
+        <section class="hero" id="hero" aria-label="Abertura">
             <div class="hero-content">
-                <h1>Comunicação Criativa para causas inspiradoras!</h1>
-                <p>Transformamos a sua missão em uma narrativa poderosa. Somos a sua parceira estratégica para fortalecer marcas e causas que promovem um impacto social positivo.</p>
+                <h1>Comunicação criativa para causas inspiradoras!</h1>
+                <p>Transformamos a sua missão em uma narrativa poderosa. Parceira estratégica para fortalecer marcas e causas com impacto social positivo.</p>
                 <a href="#contato" class="btn">Vamos Conectar!</a>
             </div>
         </section>
 
-        <section class="nossa-missao" id="nossa-missao">
-            <h2>Nossa Missão</h2>
-            <div class="missao-content">
-                <p>Somos uma empresa de comunicação especializada no terceiro setor e em projetos de impacto comunitário. Nossa expertise está na interseção entre comunicação, mobilização social e estratégias digitais. Atuamos com foco em temas como direitos humanos, juventudes, gênero, raça, crise climática e diálogo inter-religioso.</p>
-                <p>Acreditamos no poder da comunicação para inspirar mudanças e construir sociedades mais justas. Nossa missão é oferecer estratégias integradas que fortaleçam causas e instituições, criando comunidades digitais engajadas e alinhadas aos seus valores. Nossa atuação se baseia em uma experiência prática na coordenação de campanhas em países lusófonos, na gestão de mídias sociais, e na articulação de parcerias estratégicas para sensibilizar sobre questões ambientais e sociais. A expertise da empresa foi reconhecida em iniciativas internacionais de grande relevância, como o Bridging Narratives Grant e o VV Visionaries Program, reforçando nosso compromisso com uma comunicação que gera impacto positivo e real.</p>
+        <section class="quem-somos" id="quem-somos" aria-labelledby="titulo-quem-somos">
+            <h2 id="titulo-quem-somos">Quem Somos</h2>
+            <div class="quem-somos-item">
+                <div class="quem-somos-imagem">
+                    <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 22.57.11_ef871074.jpg" alt="Letícia Florêncio, Coordenadora de Comunicação" loading="lazy" />
+                </div>
+                <div class="quem-somos-texto">
+                    <h3>Consultoria de Comunicação Estratégica com Experiência Comprovada</h3>
+                    <p>Somos uma consultoria de comunicação estratégica com experiência comprovada no terceiro setor e em projetos de impacto social desde 2019. Nossa jornada começou com a atuação de nossa fundadora, Letícia Florêncio, como Coordenadora de Comunicação para países de língua portuguesa no Movimento Laudato Si'. Nesse papel, ela não apenas liderou, mas também desenvolveu e implementou estratégias de comunicação completas, que iam desde o planejamento de campanhas online e offline, até a produção de conteúdo, gestão de mídias sociais e relações com a imprensa.</p>
+                    <p>Essa experiência sólida na coordenação de iniciativas de grande escala em prol da justiça socioambiental e dos direitos humanos nos permitiu construir uma base de conhecimento prática e aprofundada. O que antes era um papel de coordenação em uma organização, hoje se transformou na expertise de uma consultoria que entende as necessidades e os desafios de marcas e causas que buscam gerar um impacto positivo e duradouro na sociedade.</p>
+                </div>
             </div>
-        </section>
 
-        <section class="quem-somos" id="quem-somos">
-            <h2>Quem Somos</h2>
-            <div class="quem-somos-item">
-                <div class="quem-somos-imagem">
-                    <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 22.57.11_ef871074.jpg" alt="Letícia Florêncio - Coordenadora de Comunicação">
-                </div>
+            <div class="quem-somos-item"> 
                 <div class="quem-somos-texto">
-                    <h3>Uma Comunicadora Apaixonada por Direitos Humanos</h3>
-                    <p>Sou Letícia Florêncio, uma comunicadora apaixonada por direitos humanos e transformação social, com sólida experiência no terceiro setor. Minha trajetória profissional é marcada pelo meu trabalho como Coordenadora de Comunicação no Movimento Laudato Si' em países lusófonos, onde atuo desde 2019, e como voluntária em comunicações para a Fundação Viver com Dignidade.</p>
+                    <h3>Soluções Integradas para Causas de Impacto</h3>
+                    <p>A nossa missão é clara: transformar a sua causa em uma narrativa poderosa e impactante. Oferecemos soluções integradas que fortalecem marcas e instituições, com foco em temas essenciais como direitos humanos, juventudes, gênero, raça, crise climática e diálogo inter-religioso. A nossa expertise abrange o desenvolvimento e a implementação de estratégias de mídias sociais, produção de conteúdo, branding e design, com um portfólio que inclui a criação de materiais impressos e digitais, como livros acadêmicos digitais para a Ordem dos Advogados do Brasil (OAB).</p>
+                    <p>Temos um histórico de colaboração com grandes parceiros, incluindo Laila Zaid, Observatório do Clima, CNBB e Cáritas, e lideramos iniciativas interculturais que foram adotadas por equipes de outros países. O nosso compromisso com a excelência nos permite adaptar mensagens e estratégias para diversos contextos, como o Brasil, Portugal, Angola e Moçambique.</p>
+                </div>
+                <div class="quem-somos-imagem">
+                    <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 22.54.54_71340517.jpg" alt="Letícia Florêncio, Jornalista e Estrategista Digital" loading="lazy" />
                 </div>
             </div>
-            <div class="quem-somos-item reverso"> <div class="quem-somos-texto">
-                    <h3>Expertise na Interseção de Comunicação e Impacto Social</h3>
-                    <p>Formada em Jornalismo, desenvolvi uma expertise única na interseção entre comunicação, mobilização social e estratégias digitais, com foco em temas essenciais como direitos humanos, juventudes, gênero, raça, crise climática e diálogo inter-religioso.</p>
-                    <p>Meu trabalho diário envolve a gestão de comunidades digitais, planejamento estratégico, produção de conteúdo e o desenvolvimento de campanhas que fortalecem causas e instituições.</p>
-                </div>
-                <div class="quem-somos-imagem">
-                    <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 22.54.54_71340517.jpg" alt="Letícia Florêncio - Jornalista e Estrategista Digital">
-                </div>
-            </div>
+
             <div class="quem-somos-item">
                 <div class="quem-somos-imagem">
-                    <img src="Imagens/Imagem do WhatsApp de 2025-08-25 à(s) 22.51.11_fc230578.jpg" alt="Letícia Florêncio - Reconhecimento Internacional">
+                    <img src="Imagens/Imagem do WhatsApp de 2025-08-25 à(s) 22.51.11_fc230578.jpg" alt="Reconhecimento internacional em comunicação e impacto" loading="lazy" />
                 </div>
                 <div class="quem-somos-texto">
-                    <h3>Reconhecimento Internacional e Compromisso com o Impacto</h3>
-                    <p>Meu compromisso em gerar impacto positivo me levou a ser selecionada para projetos internacionais de grande relevância, como:</p>
-                    <ul>
-                        <li><strong>Bridging Narratives Grant 2024:</strong> Um projeto internacional que une jornalismo e pesquisa, financiado pela Universidade Erasmus de Roterdã.</li>
-                        <li><strong>VV Visionaries Program:</strong> Da organização internacional Vital Voices, que reconhece mulheres líderes com impacto social em suas comunidades.</li>
-                        <li><strong>Faith and Communication in the Digital World:</strong> Um programa do Vaticano para o qual fui selecionada como representante das Américas.</li>
-                    </ul>
+                    <h3>Reconhecimento Global e Credibilidade Comprovada</h3>
+                    <p>A nossa atuação é reconhecida no cenário global. Fomos selecionados para o Bridging Narratives Grant (2024), um projeto internacional que une jornalismo e pesquisa, financiado pelo International Institute of Social Studies (ISS) da Universidade Erasmus de Roterdã, na Holanda. Nossa consultoria também foi incluída no VV Visionaries Program, uma iniciativa da organização global Vital Voices que reconhece as 50 mulheres líderes mundiais com impacto social positivo. Além disso, participamos do programa "Faith and Communication in the Digital World" do Vaticano como representantes das Américas.</p>
                 </div>
             </div>
         </section>
 
-        <section class="servicos" id="servicos">
-            <h2>Nossas Soluções</h2>
+        <section class="nossa-essencia" id="nossa-essencia" aria-labelledby="titulo-nossa-essencia">
+            <h2 id="titulo-nossa-essencia">Nossa Essência</h2>
+            <div class="essencia-grid">
+                <div class="essencia-card">
+                    <h3>Missão</h3>
+                    <p>Nossa missão é usar a comunicação como uma ferramenta de empoderamento e transformação social, dando voz a projetos e causas que promovem a justiça, a igualdade e a sustentabilidade.</p>
+                </div>
+                <div class="essencia-card">
+                    <h3>Visão</h3>
+                    <p>Ser referência em comunicação estratégica e jornalismo, inspirando uma nova geração de comunicadores engajados na construção de um mundo mais justo, equitativo e humano.</p>
+                </div>
+                <div class="essencia-card">
+                    <h3>Valores</h3>
+                    <p>Nossos valores são a empatia e a integridade, buscando sempre um impacto social positivo através da colaboração e do respeito mútuo. Acreditamos que a comunicação é uma ferramenta para construir um mundo mais justo, equitativo e sustentável.</p>
+                </div>
+            </div>
+            <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 23.31.18_a35dfe8d.jpg" alt="Letícia Florêncio com a Basílica de São Pedro ao fundo" class="essencia-image" loading="lazy" />
+        </section>
+
+        <section class="servicos" id="servicos" aria-labelledby="titulo-servicos">
+            <h2 id="titulo-servicos">Nossas Soluções</h2>
             <div class="servicos-grid">
                 <div class="servico-card">
-                    <img src="Imagens/comment_2360094.png" alt="Ícone de comunicação" class="servico-icon">
+                    <img src="Imagens/comment_2360094.png" alt="" class="servico-icon" loading="lazy" />
                     <h3>Comunicação e Assessoria Estratégica</h3>
-                    <p>Criamos planos de comunicação sob medida, garantindo que sua marca tenha uma voz clara e autêntica.</p>
+                    <p>Planos sob medida para sua marca ter uma voz clara e autêntica.</p>
                 </div>
                 <div class="servico-card">
-                    <img src="Imagens/chat_4959353.png" alt="Ícone de redes sociais" class="servico-icon">
+                    <img src="Imagens/chat_4959353.png" alt="" class="servico-icon" loading="lazy" />
                     <h3>Social Media</h3>
-                    <p>Gerenciamos suas redes sociais, produzimos conteúdo estratégico e transformamos seguidores em uma comunidade ativa e engajada.</p>
+                    <p>Gestão, conteúdo estratégico e comunidade ativa e engajada.</p>
                 </div>
                 <div class="servico-card">
-                    <img src="Imagens/traffic_10302724.png" alt="Ícone de marketing" class="servico-icon">
+                    <img src="Imagens/traffic_10302724.png" alt="" class="servico-icon" loading="lazy" />
                     <h3>Marketing e Tráfego Pago</h3>
-                    <p>Desenvolvemos e gerenciamos campanhas de anúncios digitais para aumentar a visibilidade, gerar leads qualificados e impulsionar o seu crescimento.</p>
+                    <p>Anúncios digitais para visibilidade, leads e crescimento.</p>
                 </div>
                 <div class="servico-card">
-                    <img src="Imagens/graphic-design_2554838.png" alt="Ícone de design" class="servico-icon">
+                    <img src="Imagens/graphic-design_2554838.png" alt="" class="servico-icon" loading="lazy" />
                     <h3>Design e Web Design</h3>
-                    <p>Criamos identidades visuais memoráveis e construímos sites que refletem a credibilidade da sua instituição.</p>
+                    <p>Identidades visuais memoráveis e sites com credibilidade.</p>
                 </div>
                 <div class="servico-card">
-                    <img src="Imagens/cloud_7747515.png" alt="Ícone de inteligência artificial" class="servico-icon">
+                    <img src="Imagens/cloud_7747515.png" alt="" class="servico-icon" loading="lazy" />
                     <h3>Automação e Inteligência Artificial</h3>
-                    <p>Implementamos ferramentas de automação e IA para otimizar processos e aumentar a eficiência das suas ações de comunicação.</p>
+                    <p>Ferramentas para otimizar processos e ganhar eficiência.</p>
                 </div>
             </div>
         </section>
 
-        <section class="portfolio" id="portfolio">
-            <h2>Nossos Resultados</h2>
-            <p>Conheça alguns dos projetos que transformamos em histórias de sucesso.</p>
+        <section class="portfolio" id="portfolio" aria-labelledby="titulo-portfolio">
+            <h2 id="titulo-portfolio">Nossos Resultados</h2>
+            <p>Conheça alguns projetos transformados em histórias de sucesso.</p>
             <div class="portfolio-grid">
                 <picture>
-                    <source srcset="caminho/para/imagem_portfolio_pequena.jpg" media="(max-width: 600px)">
-                    <img src="caminho/para/imagem_portfolio_grande.jpg" alt="Exemplo de projeto no portfólio" class="portfolio-item">
+                    <source srcset="caminho/para/imagem_portfolio_pequena.webp" type="image/webp" media="(max-width: 600px)" />
+                    <img src="caminho/para/imagem_portfolio_grande.webp" alt="Exemplo de projeto realizado" class="portfolio-item" loading="lazy" />
                 </picture>
             </div>
         </section>
 
-        <section class="contato" id="contato">
-            <h2>Vamos Conectar!</h2>
-            <p>Se você busca uma parceria para dar voz à sua causa, entre em contato e vamos conversar sobre como podemos te ajudar.</p>
+        <section class="contato" id="contato" aria-labelledby="titulo-contato">
+            <h2 id="titulo-contato">Vamos Conectar!</h2>
+            <p>Buscando parceria para dar voz à sua causa? Fale com a gente.</p>
             <form class="contact-form" action="https://formspree.io/f/seu-id-unico" method="POST">
-                <input type="text" name="name" placeholder="Nome" required>
-                <input type="email" name="email" placeholder="E-mail" required>
+                <input type="text" name="name" placeholder="Nome" required autocomplete="name" />
+                <input type="email" name="email" placeholder="E-mail" required autocomplete="email" />
                 <textarea name="message" placeholder="Mensagem" required></textarea>
                 <button type="submit" class="btn">Enviar</button>
             </form>
 
-            <div class="contact-info">
+            <div class="contact-info" aria-label="Dados de Contato">
                 <h3>Dados de Contato</h3>
-                <p>E-mail: leticiaaraujothe@gmail.com</p>
-                <p>Telefone: +55 86 994639658</p>
+                <p>E-mail: <a href="mailto:leticiaaraujothe@gmail.com">leticiaaraujothe@gmail.com</a></p>
+                <p>Telefone: <a href="https://wa.me/5586994639658" target="_blank" rel="noopener">+55 86 99463-9658</a></p>
                 <p>Localização: Salvador, Bahia</p>
             </div>
         </section>
@@ -148,10 +158,10 @@
         <p>&copy; 2025 Letícia Florêncio. Todos os direitos reservados.</p>
     </footer>
 
-    <a href="https://wa.me/5586994639658" class="whatsapp-btn" target="_blank" aria-label="Fale conosco pelo WhatsApp">
-        <img src="Imagens/WhatsApp.png" alt="Ícone do WhatsApp">
+    <a href="https://wa.me/5586994639658" class="whatsapp-btn" target="_blank" rel="noopener" aria-label="Fale conosco pelo WhatsApp">
+        <img src="Imagens/WhatsApp.png" alt="" loading="lazy" />
     </a>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js" defer></script>
 </body>
 </html>
