--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul class="nav-menu" id="primary-menu">
                 <li><a href="#quem-somos">Quem Somos</a></li>
                 <li><a href="#nossa-essencia">Nossa Essência</a></li>
+                <li><a href="#parceiros">Parceiros</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#portfolio">Portfólio</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -52,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="quem-somos-item"> 
+            <div class="quem-somos-item">
                 <div class="quem-somos-texto">
                     <h3>Soluções Integradas para Causas de Impacto</h3>
                     <p>A nossa missão é clara: transformar a sua causa em uma narrativa poderosa e impactante. Oferecemos soluções integradas que fortalecem marcas e instituições, com foco em temas essenciais como direitos humanos, juventudes, gênero, raça, crise climática e diálogo inter-religioso. A nossa expertise abrange o desenvolvimento e a implementação de estratégias de mídias sociais, produção de conteúdo, branding e design, com um portfólio que inclui a criação de materiais impressos e digitais, como livros acadêmicos digitais para a Ordem dos Advogados do Brasil (OAB).</p>
@@ -90,7 +91,29 @@
                     <p>Nossos valores são a empatia e a integridade, buscando sempre um impacto social positivo através da colaboração e do respeito mútuo. Acreditamos que a comunicação é uma ferramenta para construir um mundo mais justo, equitativo e sustentável.</p>
                 </div>
             </div>
-            <img src="Imagens/Imagem do WhatsApp de 2025-08-26 à(s) 23.31.18_a35dfe8d.jpg" alt="Letícia Florêncio com a Basílica de São Pedro ao fundo" class="essencia-image" loading="lazy" />
+        </section>
+
+        <section class="parceiros" id="parceiros" aria-labelledby="parceiros-label">
+            <span id="parceiros-label" class="sr-only">Nossos Parceiros e Clientes</span>
+            <div class="logo-carousel-container">
+                <div class="logo-carousel-track">
+                    <img src="Imagens/2XKm_SZf_400x400.jpeg.jpg" alt="Logo Observatório do Clima" loading="lazy">
+                    <img src="Imagens/BRASÃO NOVO ARQUIDIOCESE DE TERESINA.png" alt="Logo CNBB" loading="lazy">
+                    <img src="Imagens/FVCD 2021 ONDA 2.png" alt="Logo Cáritas" loading="lazy">
+                    <img src="Imagens/IgrejaRumoACOP30_APROVADO_Prancheta 1 cópia 2.png" alt="Logo Movimento Laudato Si'" loading="lazy">
+                    <img src="Imagens/JUFRA DO BRASIL PNG.png" alt="Logo JUFRA" loading="lazy">
+                    <img src="Imagens/OFS.png" alt="Logo OFS" loading="lazy">
+                    <img src="Imagens/PT_COLOR_LSM.png" alt="Logo Movimento Laudato Si'" loading="lazy">
+                    
+                    <img src="Imagens/2XKm_SZf_400x400.jpeg.jpg" alt="Logo Observatório do Clima" loading="lazy">
+                    <img src="Imagens/BRASÃO NOVO ARQUIDIOCESE DE TERESINA.png" alt="Logo CNBB" loading="lazy">
+                    <img src="Imagens/FVCD 2021 ONDA 2.png" alt="Logo Cáritas" loading="lazy">
+                    <img src="Imagens/IgrejaRumoACOP30_APROVADO_Prancheta 1 cópia 2.png" alt="Logo Movimento Laudato Si'" loading="lazy">
+                    <img src="Imagens/JUFRA DO BRASIL PNG.png" alt="Logo JUFRA" loading="lazy">
+                    <img src="Imagens/OFS.png" alt="Logo OFS" loading="lazy">
+                    <img src="Imagens/PT_COLOR_LSM.png" alt="Logo Movimento Laudato Si'" loading="lazy">
+                </div>
+            </div>
         </section>
 
         <section class="servicos" id="servicos" aria-labelledby="titulo-servicos">
@@ -127,12 +150,75 @@
         <section class="portfolio" id="portfolio" aria-labelledby="titulo-portfolio">
             <h2 id="titulo-portfolio">Nossos Resultados</h2>
             <p>Conheça alguns projetos transformados em histórias de sucesso.</p>
-            <div class="portfolio-grid">
-                <picture>
-                    <source srcset="caminho/para/imagem_portfolio_pequena.webp" type="image/webp" media="(max-width: 600px)" />
-                    <img src="caminho/para/imagem_portfolio_grande.webp" alt="Exemplo de projeto realizado" class="portfolio-item" loading="lazy" />
-                </picture>
+
+            <div class="resultado-item">
+                <h3>Design Gráfico e Identidade Visual</h3>
+                <p>Nossa abordagem em design gráfico e identidade visual é criar marcas que se conectam com o público e que transmitem valores de forma autêntica. Desenvolvemos logotipos, paletas de cores e materiais impressos e digitais que fortalecem a sua mensagem e causam um impacto memorável, com a experiência e o olhar aprofundado de quem se dedica a projetos de impacto socioambiental. Nossa expertise na temática foi fundamental para garantir que o projeto alinhasse o rigor técnico com uma comunicação visual de impacto e valores bem definidos.</p>
+                <div class="carousel-container">
+                    <div class="carousel-track">
+                        <img src="Imagens/2.png" alt="Imagem 1 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/3.png" alt="Imagem 2 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/4.png" alt="Imagem 3 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/5.png" alt="Imagem 4 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/6.png" alt="Imagem 5 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/7.png" alt="Imagem 6 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/8.png" alt="Imagem 7 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/9.png" alt="Imagem 8 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/10.png" alt="Imagem 9 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/11.png" alt="Imagem 10 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/12.png" alt="Imagem 11 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/13.png" alt="Imagem 12 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/14.png" alt="Imagem 13 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/15.png" alt="Imagem 14 de projeto de design gráfico" loading="lazy" />
+                        <img src="Imagens/16.png" alt="Imagem 15 de projeto de design gráfico" loading="lazy" />
+                    </div>
+                    <button class="carousel-button prev" aria-label="Imagem anterior">&#10094;</button>
+                    <button class="carousel-button next" aria-label="Próxima imagem">&#10095;</button>
+                </div>
             </div>
+
+            <div class="resultado-item">
+                <h3>Comunicação Social e Campanhas de Impacto</h3>
+                <p>Nossa expertise em comunicação social permite transformar ideias em movimentos. Por meio de campanhas digitais e ações estratégicas, damos voz a causas que promovem a justiça e a equidade, como a nossa atuação no Movimento Laudato Si', que mobilizou milhões de pessoas em todo o mundo. Acreditamos que uma comunicação autêntica e bem direcionada é a chave para inspirar a participação e criar um impacto social real e duradouro.</p>
+                <div class="carousel-container">
+                    <div class="carousel-track">
+                        <img src="Imagens/17.png" alt="Imagem 1 da Campanha de Comunicação Social" loading="lazy" />
+                        <img src="Imagens/18.png" alt="Imagem 2 da Campanha de Comunicação Social" loading="lazy" />
+                        <img src="Imagens/19.png" alt="Imagem 3 da Campanha de Comunicação Social" loading="lazy" />
+                    </div>
+                    <button class="carousel-button prev" aria-label="Imagem anterior">&#10094;</button>
+                    <button class="carousel-button next" aria-label="Próxima imagem">&#10095;</button>
+                </div>
+            </div>
+
+            <div class="resultado-item">
+                <h3>Produção Audiovisual e Storytelling</h3>
+                <p>O audiovisual é a nossa forma de dar vida às histórias. Trabalhamos com roteiros, captação e edição para transformar a sua mensagem em um vídeo que engaja e inspira. Nossa experiência em projetos para a Laila Zaid e outras personalidades mostra como o storytelling visual é essencial para construir uma conexão emocional e ampliar o alcance de causas sociais. Cada vídeo é uma ferramenta poderosa para gerar empatia e mobilização, traduzindo o propósito da sua marca em uma narrativa inesquecível.</p>
+                <div class="carousel-container">
+                    <div class="carousel-track">
+                        <img src="Imagens/20.png" alt="Imagem 1 do Projeto Laila Zaid" loading="lazy" />
+                        <img src="Imagens/21.png" alt="Imagem 2 do Projeto Laila Zaid" loading="lazy" />
+                        <img src="Imagens/22.png" alt="Imagem 3 do Projeto Laila Zaid" loading="lazy" />
+                        <img src="Imagens/23.png" alt="Imagem 4 do Projeto Laila Zaid" loading="lazy" />
+                    </div>
+                    <button class="carousel-button prev" aria-label="Imagem anterior">&#10094;</button>
+                    <button class="carousel-button next" aria-label="Próxima imagem">&#10095;</button>
+                </div>
+            </div>
+
+            <div class="resultado-item">
+                <h3>Consultoria em Comunicação Intercultural</h3>
+                <p>Liderança em projetos interculturais para adaptar mensagens e estratégias de comunicação a diversos contextos globais, com foco em Brasil, Portugal, Angola e Moçambique.</p>
+                <div class="carousel-container">
+                    <div class="carousel-track">
+                        <img src="Imagens/portfolio/intercultural-1.webp" alt="Imagem 1 do Projeto Intercultural" loading="lazy" />
+                        <img src="Imagens/portfolio/intercultural-2.webp" alt="Imagem 2 do Projeto Intercultural" loading="lazy" />
+                    </div>
+                    <button class="carousel-button prev" aria-label="Imagem anterior">&#10094;</button>
+                    <button class="carousel-button next" aria-label="Próxima imagem">&#10095;</button>
+                </div>
+            </div>
+
         </section>
 
         <section class="contato" id="contato" aria-labelledby="titulo-contato">
